Resolves: tdf#52510 handle trailing ';' specifying empty following subformat

Change-Id: Ic84065f11619542fe735f45e72c9303897ea5755
(cherry picked from commit 8cb3faca4b1d1d9c68faba103c6c6117853e639e)
Reviewed-on: https://gerrit.libreoffice.org/41878
Tested-by: Jenkins <ci@libreoffice.org>
Reviewed-by: Christian Lohmaier <lohmaier+LibreOffice@googlemail.com>